tags spacing issue and search btn issue resolved

--- a/src/assets/css/homepage2.css
+++ b/src/assets/css/homepage2.css
@@ -73,10 +73,10 @@
 .tabBox.tabBox--new .maincardBox { display: block; }
 .tabBox.tabBox--new .maincardBox__card-wrapper { max-width: 100%; height: auto; }
 .tabBox__list { padding: 2rem; margin: -10.25rem 0 2rem 2rem; list-style-type: none; text-align: center; white-space: 'break-spaces'; overflow: hidden}
-.tabBox__list  li { display: inline; color: #005188; font-weight: 700; font-size: 0.9375rem; cursor: pointer;outline: none;}
+.tabBox__list  li { display: inline; color: #005188; font-weight: 700; font-size: 0.9375rem; cursor: pointer;outline: none; margin-right:2rem;}
 /* .tabBox__list > li > a { padding: 0.375rem 1.25rem; margin: 0 1rem; font-weight: 400; min-width: 7rem; display: inline-block; text-decoration: none; color: #9D9D9D; background: rgba(255, 255, 255, 0.4); border: 1px solid rgba(0, 0, 0, 0.25); box-sizing: border-box; backdrop-filter: blur(54px); border-radius: 10px; } */
 
-.tabBox__list  li > a { padding: 0.875rem 1.5rem; margin: 0 2rem; font-weight: 400; min-width: 7.5rem; display: inline-block; text-decoration: none; color: #fff; border: 1px solid #30C1FF; 
+.tabBox__list  li > a { padding: 0.875rem 1.5rem; font-weight: 400; min-width: 7.5rem; display: inline-block; text-decoration: none; color: #fff; border: 1px solid #30C1FF; 
     /* background: linear-gradient(180deg, #30C1FF 0%, #1597CF 100%), #25B9D3; */
      backdrop-filter: blur(54px); box-sizing: border-box; border-radius: 2rem;width: max-content; }
 .tabBox__list  li > a.active,
